Fix alignment of Adjustment page

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -11,6 +11,6 @@
     margin:auto;
   }
   
-  #difference{
+  #difference, #origDifference, #adjDifference{
     text-align:center;
   }
